# so_long

./: .gitignore  CMakeLists.txt  Makefile
bonus/: main_bonus.c  print_moves_bonus.c
include/: so_long.h
libft/: ft_atoll.c  ft_bzero.c  ft_calloc.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstiter.c  ft_memcmp.c  ft_memmove.c  ft_putendl_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcpy.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_tolower.c
libs/MinilibX/: mlx_mouse.m  mlx_new_image.m  mlx_new_window.m  mlx_png.c  mlx_shaders.c
libs/libft/: Makefile  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_lstdelone.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcpy.c  ft_memset.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_substr.c  ft_toupper.c  libft.h
maps/: map_1.ber  map_2.ber  map_3.ber  map_with_patrol.ber
src/: appoint_textures.c  checker.c  enemies_mod_utils.c  error.c  errors.c  extract_map_data.c  filling_map.c  init_all_textures.c  init_map_object_utils.c  init_map_objects.c  init_render_data_utils.c  init_textures.c  init_textures_utils.c  key_press_processing.c  main.c  main_loop_event.c  main_loop_event_utils.c  main_loop_mod_utils.c  main_loop_print_list.c  main_loop_x.c  map_validation.c  map_validation_utils.c  minus_collectibles_first.c  move_config_utils.c  parser.c  parser_utils.c  print_moves.c  render_map.c  render_objects.c  rendering.c
textures/: space.xpm  wall.xpm
textures/collectible/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm
textures/collectible/0/: 0.xpm  1.xpm  2.xpm  3.xpm
textures/collectible/1/: 0.xpm  1.xpm  2.xpm  3.xpm
textures/collectible/2/: 0.xpm  1.xpm  2.xpm  3.xpm
textures/enemy/0/: 0.xpm
textures/enemy/1/: 0.xpm
textures/enemy/2/: 0.xpm
textures/enemy/3/: 0.xpm
textures/exit/: exit-close.xpm
textures/exit/0/: 0.xpm
textures/player/0/: 0.xpm
textures/player/1/: 0.xpm
textures/player/2/: 0.xpm
textures/player/3/: 0.xpm
textures/steps_counter/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  7.xpm  8.xpm  9.xpm  counter_head.xpm
